Add Support in geo_match enrichment policy for any type of geometry (#59020)
geo_match enrichment works currently only with points. This change adds the ability to
use any type of geometry.